<resources>
    <string name="app_name">Story App (Kotlin)</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment 1</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="atau">Atau</string>
    <string name="name">Name</string>
    <string name="story_app">Story App</string>
    <string name="sign_out">Sign Out</string>
    <string name="story_image_view_description">Gambar dari Story yang dibagikan</string>
    <string name="reload">coba lagi</string>
    <string name="no_data">Tidak ada data</string>
    <string name="failed_to_load_data">Gagal memuat data</string>
    <string name="detail_story">Detail Story</string>
    <string name="story_picture_description">Gambar postingan cerita</string>
    <string name="btn_navigate_to_add_story_page">Tombol berpindah ke halaman Tambah Story</string>
    <string name="add_story">Add Story</string>
    <string name="add_story_image_description">Gambar cerita untuk diposting</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="image_upload_empty">Pilih gambar terlebih dahulu!</string>
</resources>