<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".presentation.ui.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/add_story_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:navigationIcon="@drawable/baseline_arrow_back_24_white"
            android:theme="?attr/actionBarTheme"
            android:title="@string/add_story"
            android:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add_story_img_story"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/add_story_image_description"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_image_search_150_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_story_toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/add_story_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/add_story_btn_camera"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toStartOf="@+id/add_story_guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/add_story_img_story" />

        <Button
            android:id="@+id/add_story_btn_gallery"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gallery"
            app:layout_constraintStart_toEndOf="@+id/add_story_guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/add_story_img_story" />

        <View
            android:id="@+id/add_story_divider_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorOutlineVariant"
            app:layout_constraintTop_toBottomOf="@+id/add_story_btn_camera" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_story_edt_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/deskripsi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_story_divider_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_story_edt_description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="5"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/add_story_divider_horizontal_after_description"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorOutlineVariant"
            app:layout_constraintTop_toBottomOf="@+id/add_story_edt_description_layout"
            app:layout_goneMarginTop="16dp"/>

        <Button
            android:id="@+id/add_story_btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            app:layout_constraintTop_toBottomOf="@id/add_story_divider_horizontal_after_description"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ProgressBar
            android:id="@+id/add_story_loading_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/add_story_divider_horizontal_after_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>